# linux-lvgl-v9

./: CMakeLists.txt  README.md  lv_conf.h  main.c
lvgl/examples/others/observer/: lv_example_observer_5.c
lvgl_ui/: common.h  lv_examples.c  lv_examples.h
lvgl_ui/core/: ai_comm_manager.c  ai_comm_manager.h  data_manager.c  data_manager.h  ipc_udp.c  key355.c  key355.h  ui_manager.c  ui_manager.h
lvgl_ui/drivers/: mpu6050_info.c  mpu_6050_info.h
lvgl_ui/modules/: AI_ui.c  AI_ui.h  cpu_ui.c  cpu_ui.h  menu_ui.c  menu_ui.h  music_ui.c  music_ui.h  storage_ui.c  storage_ui.h  wifi_manager.c  wifi_manager.h  wifi_notification.c  wifi_notification.h
lvgl_ui/utils/: ui_perf_mgr.c  ui_perf_mgr.h  ui_rounded.c  ui_rounded.h  ui_utils.c  ui_utils.h
src/: main.c
src/lib/display_backends/: fbdev.c
